tests/error/vector_invalid.gw
// [contains] in vector value
@(0,0,0,NULL);
